--- a/_config.yml
+++ b/_config.yml
@@ -24,9 +24,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://yangyuyangyu.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 google_analytics: G-7XRTK0F6HR
 
 
