--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,9 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://yangyuyangyu.com" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
-remote_theme: jekyll/minima
+theme: minima
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
-google_analytics: G-7XRTK0F6HR
-
 
 # Exclude from processing.
 # The following items will not be processed, by default.
